discussion/kv_engine/158822/158822_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47460: Add operator<< to PersistedStats

Also remove unnecessary includes of collection_persisted_stats.h

Change-Id: I27b300176b516a7eeca70b78f0e395ca2046af67

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-08-10 15:26:24.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-10 15:45:47.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38471/ : FAILURE

Timeout of a CTest test 402/402 Test #175: ep-engine_ep_unit_tests.PersistentAndEphemeral/DcpStreamSyncReplTest ..........................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38471/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11206/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2314:13: error: enumeration value "DiskFull" not handled in switch [clang-diagnostic-switch]
    switch (status.ErrorCode()) {
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11206/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2314:13:
error: enumeration value "DiskFull" not handled in switch [clang-diagnostic-switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11206/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32804/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2314:13:
error: enumeration value "DiskFull" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32804/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/846/ : FAILURE

Compile error at [2021-08-10T15:30:22.307Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2314:12:
error: enumeration value ?DiskFull? not handled in switch [-Werror=switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/846/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11925/ : FAILURE

Compile error at [2021-08-10T15:29:15.179Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2314:13:
error: enumeration value "DiskFull" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11925/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/840/ : FAILURE

Compile error at [2021-08-10T15:33:04.867Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2314:13:
error: enumeration value "DiskFull" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/840/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13000/ : FAILURE

Compile error at [2021-08-10T15:34:53.148Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2314:12:
error: enumeration value ?DiskFull? not handled in switch [-Werror=switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13000/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13358/ : FAILURE

Compile error at [2021-08-10T15:34:31.459Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2314:13:
error: enumeration value "DiskFull" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13358/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20904/ : FAILURE

Compile error at [2021-08-10T15:35:28.107Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2314:13:
error: enumeration value "DiskFull" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20904/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9902/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12808/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
